# FigFlix

./: .env.example  .gitignore  ADMIN_FEATURES.md  CACHE_FIX_INSTRUCTIONS.md  QUICK_START.md  QUICK_START_TMDB.md  README.md  TEST_REGISTRATION.md  TMDB_INTEGRATION.md  index.html  login.css  login.html  manage.py  pyproject.toml  setup.bat  setup.sh  signup.css  signup.html  style.css
.claude/: settings.local.json
accounts/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
accounts/management/commands/: fix_admin_permissions.py
accounts/migrations/: 0001_initial.py
figflix/: asgi.py  settings.py  urls.py  wsgi.py
movies/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  tmdb_service.py  urls.py  views.py
movies/migrations/: 0001_initial.py
recommendations/: admin.py  api_urls.py  api_views.py  models.py  recommendation_engine.py  serializers.py  urls.py  views.py
recommendations/migrations/: 0001_initial.py
reviews/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
static/js/: admin_upload.js  api.js  dashboard.js  home.js  manage_movies.js  manage_users.js  movie_detail.js  movie_list.js  profile.js  register.js
templates/: base.html
templates/accounts/: dashboard.html  login.html  manage_users.html  profile.html  register.html  register_admin.html  register_user.html
templates/movies/: admin_upload.html  home.html  manage_movies.html  movie_detail.html  movie_list.html
